# Dream-Agent

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  MERGE_REPORT.md  README.md  pyproject.toml  setup.sh
dream/: extractor.py  inbox.py  menubar.py  router.py  wake.py
hooks/: post-commit.sh
launchd/: com.dream.menubar.plist  com.dream.service.plist  com.dream.sync.plist
mycelium/api/: inspire.py  router.py
mycelium/consolidation/: dreamer.py
mycelium/core/: cell.py  intersection.py  primitives.py  substrate.py
mycelium/embedding/: embedder.py
mycelium/energy/: metabolism.py  spore.py
mycelium/identity/: keys.py
mycelium/provenance/: anchor.py  hasher.py
mycelium/sharding/: discovery.py  manager.py
mycelium/storage/: store.py
scripts/: dream_import_claude.py  dream_inbox_daemon.py  dream_menubar.py  dream_sync.py  run_service.py  run_wake_verify.py
