[project]
name = "dream-agent"
version = "0.1.0"
description = "A cognitive memory agent for Claude Code — watches your work, discovers cross-domain connections, surfaces verified insights"
requires-python = ">=3.11"
authors = [{ name = "oxblackk", email = "oxblackk@mycelium.org" }]
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "numpy>=1.24",
    "sentence-transformers>=2.2",
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
    "cryptography>=43.0",
]

[project.optional-dependencies]
menubar = [
    "rumps>=0.4.0",
    "anthropic>=0.40.0",
]
dev = [
    "ruff>=0.9",
    "mypy>=1.14",
    "pytest>=8.0",
    "pytest-cov>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dream", "mycelium"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "SIM",
    "TCH", "RUF", "C4", "DTZ", "PT",
]
ignore = ["D100", "D104", "S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN", "D"]

[tool.mypy]
python_version = "3.11"
mypy_path = "."
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "sentence_transformers.*",
    "rumps.*",
    "anthropic.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
