[project]
name = "mycelium"
version = "0.1.0"
description = "A Cognitive Substrate Simulator — Three Primitives, Infinite Emergence"
requires-python = ">=3.11"
authors = [{ name = "oxblackk", email = "oxblackk@mycelium.org" }]
dependencies = [
    "numpy>=1.24",
    "sentence-transformers>=2.2",
    "torch>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "pygame>=2.5",
    "networkx>=3.1",
    "pyyaml>=6.0",
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
    "umap-learn>=0.5.11",
    "cryptography>=43.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
    "mypy>=1.14",
    "pytest>=8.0",
    "pytest-cov>=6.0",
]
dream = [
    "rumps>=0.4.0",
    "anthropic>=0.40.0",
    "watchdog>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mycelium", "dream"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "SIM",
    "TCH", "RUF", "C4", "DTZ", "PT",
]
ignore = ["D100", "D104", "S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN", "D"]
"scripts/run_temporal_experiment.py" = ["E501"]
"scripts/run_adversarial_experiment.py" = ["E501"]
"scripts/run_multi_agent_experiment.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
mypy_path = "."
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "sentence_transformers.*",
    "pygame.*",
    "networkx.*",
    "sklearn.*",
    "scipy.*",
    "torch.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
